--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
+    "validations-br": "^1.2.0",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9",
     "yup-locale-pt": "^0.0.8"
