--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.12.2",
     "react-icons": "^4.2.0",
