--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "react-hook-form": "^7.12.2",
     "react-icons": "^4.2.0",
     "react-input-mask": "^2.0.4",
+    "react-loading-screen": "^0.0.17",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-toast-notifications": "^2.5.1",
     "react-toastify": "^7.0.4",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
