--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.1",
     "axios-mock-adapter": "^1.19.0",
     "dotenv": "^10.0.0",
+    "firebase": "^8.9.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-cookie": "^4.0.3",
@@ -61,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@react-mock/localstorage": "^0.1.2",
     "@types/jquery": "^3.5.6",
     "@types/react-input-mask": "^3.0.1",
     "@types/react-modal": "^3.12.1",
