--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^1.6.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.12.2",
     "react-icons": "^4.2.0",
     "react-input-mask": "^2.0.4",
