--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-REACT_APP_API_URL=https://fastapi-newmission.herokuapp.com
-REACT_APP_API_LOCAL_URL=http://localhost:8000
+REACT_APP_API_URL=http://localhost:8000
 
-REACT_APP_CREDENTIALS_GOOGLE="402158444851-49b3di90bq9lg21ac6a6bvj8mu0nvcpl.apps.googleusercontent.com"
+REACT_APP_CREDENTIALS_GOOGLE=
